@startuml FactoryMethod_Pattern

title 工厂方法模式

!theme plain

abstract class AbstractAircraft {
    # maxHp: int
    # hp: int
    ---
    + AbstractAircraft(int, int, int, int, int)
    + decreaseHp(int): void
    + getHp(): int
}

class MobEnemy {
    + MobEnemy(int, int, int, int, int)
}

class EliteEnemy {
    + EliteEnemy(int, int, int, int, int)
}

class ElitePlusEnemy {
    + ElitePlusEnemy(int, int, int, int, int)
}

class AceEnemy {
    + AceEnemy(int, int, int, int, int)
}

class BossEnemy {
    + BossEnemy(int, int, int, int, int)
}

interface EnemyFactory {
    + {abstract} createEnemy(int, int): AbstractAircraft
}

class MobEnemyFactory {
    + createEnemy(int, int): AbstractAircraft
}

class EliteEnemyFactory {
    + createEnemy(int, int): AbstractAircraft
}

class ElitePlusEnemyFactory {
    + createEnemy(int, int): AbstractAircraft
}

class AceEnemyFactory {
    + createEnemy(int, int): AbstractAircraft
}

class BossEnemyFactory {
    + createEnemy(int, int): AbstractAircraft
}

AbstractAircraft <|-- MobEnemy
AbstractAircraft <|-- EliteEnemy
AbstractAircraft <|-- ElitePlusEnemy
AbstractAircraft <|-- AceEnemy
AbstractAircraft <|-- BossEnemy

EnemyFactory <|.. MobEnemyFactory
EnemyFactory <|.. EliteEnemyFactory
EnemyFactory <|.. ElitePlusEnemyFactory
EnemyFactory <|.. AceEnemyFactory
EnemyFactory <|.. BossEnemyFactory

MobEnemyFactory ..> MobEnemy : create
EliteEnemyFactory ..> EliteEnemy : create
ElitePlusEnemyFactory ..> ElitePlusEnemy : create
AceEnemyFactory ..> AceEnemy : create
BossEnemyFactory ..> BossEnemy : create

@enduml